fix spacing

--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -594,7 +594,5 @@
 }
 
 .the-logic-tag p {
-  position: relative;
-  bottom: -2px;
   margin: 0;
 }
